Fix and refactor column alignment for heading-block
Because this is shared across many templates, I've had to refactor
heading-block. Which fixes this issue across them all.
Topics index/show, topical events, orgs page/index/external,
publications show, consultations show,
attachment full width and world locations.

https://www.pivotaltracker.com/story/show/59109348

--- a/app/assets/stylesheets/frontend/views/_consultations.scss
+++ b/app/assets/stylesheets/frontend/views/_consultations.scss
@@ -101,6 +101,7 @@ nav.consultations_scope {
     margin-bottom: $gutter * 1.5;
     @include media(tablet) {
       padding: $gutter;
+      margin: 0 $gutter-half $gutter*1.5;
     }
 
     a {
